--- a/trunk/Paper/PosterPaper-Evaluating GraphCololoring.tex
+++ b/trunk/Paper/PosterPaper-Evaluating GraphCololoring.tex
@@ -280,77 +280,102 @@ Dropping to the CPU to solve the conflicts is common in many approaches but give
 
 
 \section{Experiments and Results}
-The algorithm has been implemented using the CUDA API and the tests were carried out on a Tesla S1070. The configuration is as follows:
-\begin{itemize}
-  \item Number of Cores:
-  \item Memory:
-\end{itemize}
+The algorithm has been implemented using the CUDA API and the tests were carried out on a Tesla S1070. 
+
+%The configuration is as follows:
+%\begin{itemize}
+%  \item Number of Cores:
+%  \item Memory:
+%\end{itemize}
 
 
-The tests were carried out on these 9 real graphs from the University of Florida Sparse Matrix Collection [] which were regrouped in 3 categories
+The tests were carried out on different categories of real graphs from the University of Florida Sparse Matrix Collection []. In this paper we will focus on 3 graphs from the Civil Engineering domain:
 
 \begin{table}
 \scriptsize
 \begin{center}
-\begin{tabular}{c c c c c}
+\begin{tabular}{c c c c c c c c c}
 \hline
-Name & $n$ & $m$ & $\Delta$ & Avg Degree \
+Name & $n$ & $m$ & $\Delta$ & Avg Degree & FF Colors & SDO $\&$ LDO Col & FF Time & Time \
 \\
 \hline
-Structural Engineering  \\
-ct20stif & 52,329 & 1,375,396 & 206 & 50 \\
-nasasrb & 54,870 & 1,366,097 & 275 & 47 \\
-pwtk  & 217,918 & 5,926,171 & 179 & 52 \\
+pkustk10 & 81,920 & 2,114,154 & 89 & 52 & 42 & 42 & 39 & 226838\\
+pkustk11 & 87,804 & 2,565,054 & 131 & 55 & 57 & 51 & 48 & 250112\\
+pkustk13 & 94,893 & 3,260,967 & 299 & 68 & 57 & 51 & 66 & 612960\\
 \\
-Civil Engineering \\
-pkustk10 & 81,920 & 2,114,154 & 89 & 52 \\
-pkustk11 & 87,804 & 2,565,054 & 131 & 55 \\
-pkustk13 & 94,893 & 3,260,967 & 299 & 68\\
-\\
-Automotive \\
-hood & 220,542 & 5,273,947 & 76  & 47 \\
-msdoor & 417,792 & 9,912,536 & 76 & 46 \\
-ldoor & 958,464 & 22,785,136 & 76 & 46 \\
-
 \end{tabular}
-\caption{Graph properties and source}
-\label{amean_time}
+\caption{Graph properties}
+\label{tbl:properties}
 \end{center}
 \end{table}
 
+%pkustk10 & 42 & 39 & 42 & 226838 \\
+%pkustk11 & 57 & 48 & 51 & 250112 \\
+%pkustk13 & 57 & 66 & 51 & 612960\\
 
 
-Say more about the graphs.  Range of similar average degree.  Variation in max-degree and size.  Similar number of colors, but size impacts execution time significantly due to polynomial algorithm.  etc. etc.
-  
-
-Sequential First Fit and SDO $\&$ LDO were run on each of the above graphs to get a color and timing baseline.  
-    
-\begin{table}
-\scriptsize
-\begin{center}
-\begin{tabular}{l c c c c}
-\hline
-Name & Colors  & Time  & Colors & Time \\
- & FF & FF &   SDO$\&$LDO &  SDO$\&$LDO\
-\\
-\hline
-ct20stif & 49 & 29 & 48 & 203387 \\
-nasasrb & 41 & 29 & 36 & 646113 \\
-pwtk  & 48 & 116 & 48 & 5000000 \\
-\\
-pkustk10 & 42 & 39 & 42 & 226838 \\
-pkustk11 & 57 & 48 & 51 & 250112 \\
-pkustk13 & 57 & 66 & 51 & 612960\\
-\\
-hood & 42 & 105 & 36  & 1709180 \\
-msdoor & 42 & 197 & 35 & 7281740 \\
-ldoor & 42 & 450 & 35 & 34584800 \\
-
-\end{tabular}
-\caption{Sequential coloring results for FF and SDO$\&$LDO}
-\label{amean_time}
-\end{center}
-\end{table}
+%\begin{table}
+%\scriptsize
+%\begin{center}
+%\begin{tabular}{c c c c c}
+%\hline
+%Name & $n$ & $m$ & $\Delta$ & Avg Degree \
+%\\
+%\hline
+%Structural Engineering  \\
+%ct20stif & 52,329 & 1,375,396 & 206 & 50 \\
+%nasasrb & 54,870 & 1,366,097 & 275 & 47 \\
+%pwtk  & 217,918 & 5,926,171 & 179 & 52 \\
+%\\
+%Civil Engineering \\
+%pkustk10 & 81,920 & 2,114,154 & 89 & 52 \\
+%pkustk11 & 87,804 & 2,565,054 & 131 & 55 \\
+%pkustk13 & 94,893 & 3,260,967 & 299 & 68\\
+%\\
+%Automotive \\
+%hood & 220,542 & 5,273,947 & 76  & 47 \\
+%msdoor & 417,792 & 9,912,536 & 76 & 46 \\
+%ldoor & 958,464 & 22,785,136 & 76 & 46 \\
+%
+%\end{tabular}
+%\caption{Graph properties and source}
+%\label{amean_time}
+%\end{center}
+%\end{table}
+%
+%
+%
+%Say more about the graphs.  Range of similar average degree.  Variation in max-degree and size.  Similar number of colors, but size impacts execution time significantly due to polynomial algorithm.  etc. etc.
+%  
+%
+%Sequential First Fit and SDO $\&$ LDO were run on each of the above graphs to get a color and timing baseline.  
+%    
+%\begin{table}
+%\scriptsize
+%\begin{center}
+%\begin{tabular}{l c c c c}
+%\hline
+%Name & Colors  & Time  & Colors & Time \\
+% & FF & FF &   SDO$\&$LDO &  SDO$\&$LDO\
+%\\
+%\hline
+%ct20stif & 49 & 29 & 48 & 203387 \\
+%nasasrb & 41 & 29 & 36 & 646113 \\
+%pwtk  & 48 & 116 & 48 & 5000000 \\
+%\\
+%pkustk10 & 42 & 39 & 42 & 226838 \\
+%pkustk11 & 57 & 48 & 51 & 250112 \\
+%pkustk13 & 57 & 66 & 51 & 612960\\
+%\\
+%hood & 42 & 105 & 36  & 1709180 \\
+%msdoor & 42 & 197 & 35 & 7281740 \\
+%ldoor & 42 & 450 & 35 & 34584800 \\
+%
+%\end{tabular}
+%\caption{Sequential coloring results for FF and SDO$\&$LDO}
+%\label{amean_time}
+%\end{center}
+%\end{table}
 
 
 While the colors are accurate, the timing information for the sequential SDO $\&$ LDO could have been improved. The latter has is from a naive implementation which is quite inefficient. Nevertheless, the sequential SDO $\&$ LDO has been reported by its authors [...] to be O (N$^2$) and despite yielding a good coloring is quite slow. On the other hand, First Fit which is fast yields a poor coloration!\
@@ -360,77 +385,77 @@ Ideally what we would really want is a fast algorithm that generates as few colo
 \subsection{Algorithms Compared}
 
 To investigate the impact of parallel graph coloring algorithms on  both performance and number of colors obtained, the number of threads is linearly incremented and the timing and color obtained is compared.\\
-
-\textbf{Number of threads}\
-Given that the graphs have very different sizes, it does not make sense to use the same number of threads for each. For example, for a graph of 50 000 nodes, if 1024 threads are used, each thread handles about 48 vertices while for a graph of 500 000 nodes, each thread will operate on around 480 vertices. Since GPU cores are much slower than state-of-the-art processors speedup gains are the result of using as many cores as possible where each is operating on just a few vertices.
-
-To determine subgraph sizes that tend to give fewer colors, we linearly decreased the size of the subgraph by varying the number of threads for each of the 9 real graphs that we have. The results is shown in Figure~\ref{figureSubGraph} and Table~\ref{optimalColoringTable}.\\
-
-\begin{figure}
-  \centering
-  \includegraphics[scale=0.5]{figures/subgraphSize.png}
-  \caption{Subgraph size for Optimal color per algorithm and graph}
-  \label{figureSubGraph}
-\end{figure}
-
-
-
-\begin{table}
-\scriptsize
-\begin{center}
-\begin{tabular}{c c c}
-\hline
-Parallel Algorithm  & Average  & Standard Deviation \\
-\hline
-FF & 8.2 & 1.9 \\
-SDO$\&$LDO & 12.2 & 13.2 \\
-MAX OUT & 14.0 & 14.0 \\
-MIN OUT & 9.3 & 3.8 \\
-\end{tabular}
-\caption{Subgraph size for optimal coloring}
-\label{optimalColoringTable}
-\end{center}
-\end{table}
+%
+%\textbf{Number of threads}\
+%Given that the graphs have very different sizes, it does not make sense to use the same number of threads for each. For example, for a graph of 50 000 nodes, if 1024 threads are used, each thread handles about 48 vertices while for a graph of 500 000 nodes, each thread will operate on around 480 vertices. Since GPU cores are much slower than state-of-the-art processors speedup gains are the result of using as many cores as possible where each is operating on just a few vertices.
+%
+%To determine subgraph sizes that tend to give fewer colors, we linearly decreased the size of the subgraph by varying the number of threads for each of the 9 real graphs that we have. The results is shown in Figure~\ref{figureSubGraph} and Table~\ref{optimalColoringTable}.\\
+%
+%\begin{figure}
+%  \centering
+%  \includegraphics[scale=0.5]{figures/subgraphSize.png}
+%  \caption{Subgraph size for Optimal color per algorithm and graph}
+%  \label{figureSubGraph}
+%\end{figure}
+%
+%
+%
+%\begin{table}
+%\scriptsize
+%\begin{center}
+%\begin{tabular}{c c c}
+%\hline
+%Parallel Algorithm  & Average  & Standard Deviation \\
+%\hline
+%FF & 8.2 & 1.9 \\
+%SDO$\&$LDO & 12.2 & 13.2 \\
+%MAX OUT & 14.0 & 14.0 \\
+%MIN OUT & 9.3 & 3.8 \\
+%\end{tabular}
+%\caption{Subgraph size for optimal coloring}
+%\label{optimalColoringTable}
+%\end{center}
+%\end{table}
 
 
 
 \subsection{Multi Passes}\
 In the second set of experiments, we allow the program to determine the number of GPU passes it requires. We have seen that if the CPU has fewer than 200 conflicts to solve it is very fast(It is better to use a percentage, like percentage of the total number of vertices, but the stop criterion dose not have math ). (How did you arrive at this number of 200?)  - can we instead say that we move over to CPU when the number of remaining conflicts is negligible So after each pass we check to see the number of conflicts and if it is approximately less than 200, we terminate the GPU Passes and send the remaining conflicts to the CPU for solving.\
 
-\begin{figure*}[h]
-  \includegraphics[scale=0.4]{figures/automotive.png}
-  \caption{ Automotive }
-\end{figure*}
+%\begin{figure*}[h]
+%  \includegraphics[scale=0.4]{figures/automotive.png}
+%  \caption{ Automotive }
+%\end{figure*}
+%
+%\begin{figure*}[h]
+%  \includegraphics[scale=0.3]{figures/structuralLand.png}
+%  \caption{ Structural }
+%\end{figure*}
 
-\begin{figure*}[h]
-  \includegraphics[scale=0.3]{figures/structuralLand.png}
-  \caption{ Structural }
-\end{figure*}
-
-\begin{figure*}[h]
+\begin{figure*}[t]
   \includegraphics[scale=0.34]{figures/civilLand.png}
   \caption{ Civil }
 \end{figure*}
-
-\begin{figure*}[h]
-  \includegraphics[scale=0.45]{figures/pwtkMetis.png}
-  \caption{ Pwtk Metis }
-\end{figure*}
-
-\begin{figure*}[h]
-  \includegraphics[scale=0.45]{figures/nasasrbMetis.png}
-  \caption{ Nasasrb Metis }
-\end{figure*}
-
-Refer to the figures.  Need better labels (graph names rather than a,b,c).  SDO$\&$LDO is approximately twice as fast as compared to MAX or MIN. However, the number of colors for MAX and MIN is usually better than SDO$\&$LDO, with MAX nearly consistently yielding  fewer colors. For this set of graphs, the MAX heuristic also yields fewer colors that the sequential SDO$\&$LDO algorithm and the sequential First Fit   (FF: 42, 57, 57 - SDO: 42, 51, 51 - Best form other Paper: 44, 57,57 removed)  Also should talk about relationship between number of threads and colors, and number of threads and performance.  Where in these graphs does the performance associated with 8 vertices per subgraph fall?  Need to make a connection back to that.\
-
-For this second set of tests, we see that though we easily beat the sequential First Fit in terms of color allocated, for ct20stif and nasasrb, we do not get consistently get fewer or match the colors of sequential SDO$\&$LDO while for the pwtk graph, we are well below the 48 colors obtained from running sequential SDO.  Do you have a sense why you are using fewer colors?
-
-For ct20stif, in our 10 test runs we sometimes get 47 colors which beat the sequential SDO implementation but on average we get more colors and the best performances are obtained with parallel First Fit. Where is non-determinism coming from?  The conflict resolution?  You should probably elaborate on that.
-(FF: 50, 47, 52 - SDO: 48, 36, 48 - Best from other Paper: 47,38,41)\
-
-\subsection{Using METIS}
-METIS is a set of algorithms that can be used to partition a graph into subgraphs. Many parallel graph algorithms advise the use of METIS to have better partitioning. However these algorithms run on parallel machines and they do not divide graphs in as many partitions as we do. Consequently when we tried to run METIS to partition the graph as we need, the resulting partitions were very unbalanced. The figure below shows the subgraph sizes from metis.
+%
+%\begin{figure*}[h]
+%  \includegraphics[scale=0.45]{figures/pwtkMetis.png}
+%  \caption{ Pwtk Metis }
+%\end{figure*}
+%
+%\begin{figure*}[h]
+%  \includegraphics[scale=0.45]{figures/nasasrbMetis.png}
+%  \caption{ Nasasrb Metis }
+%\end{figure*}
+%
+%Refer to the figures.  Need better labels (graph names rather than a,b,c).  SDO$\&$LDO is approximately twice as fast as compared to MAX or MIN. However, the number of colors for MAX and MIN is usually better than SDO$\&$LDO, with MAX nearly consistently yielding  fewer colors. For this set of graphs, the MAX heuristic also yields fewer colors that the sequential SDO$\&$LDO algorithm and the sequential First Fit   (FF: 42, 57, 57 - SDO: 42, 51, 51 - Best form other Paper: 44, 57,57 removed)  Also should talk about relationship between number of threads and colors, and number of threads and performance.  Where in these graphs does the performance associated with 8 vertices per subgraph fall?  Need to make a connection back to that.\
+%
+%For this second set of tests, we see that though we easily beat the sequential First Fit in terms of color allocated, for ct20stif and nasasrb, we do not get consistently get fewer or match the colors of sequential SDO$\&$LDO while for the pwtk graph, we are well below the 48 colors obtained from running sequential SDO.  Do you have a sense why you are using fewer colors?
+%
+%For ct20stif, in our 10 test runs we sometimes get 47 colors which beat the sequential SDO implementation but on average we get more colors and the best performances are obtained with parallel First Fit. Where is non-determinism coming from?  The conflict resolution?  You should probably elaborate on that.
+%(FF: 50, 47, 52 - SDO: 48, 36, 48 - Best from other Paper: 47,38,41)\
+%
+%\subsection{Using METIS}
+%METIS is a set of algorithms that can be used to partition a graph into subgraphs. Many parallel graph algorithms advise the use of METIS to have better partitioning. However these algorithms run on parallel machines and they do not divide graphs in as many partitions as we do. Consequently when we tried to run METIS to partition the graph as we need, the resulting partitions were very unbalanced. The figure below shows the subgraph sizes from metis.
 
 
 \subsection{Conclusion}
