--- a/Paper/PosterPaper-Evaluating GraphCololoring.tex
+++ b/Paper/PosterPaper-Evaluating GraphCololoring.tex
@@ -174,7 +174,12 @@ GPUs have different architectures compared to parallel computers where most of t
 %  \item Conflict resolving: Re-coloring the detected vertices with conflicts.
 %\end{inparaenum}
 
-
+\begin{figure*}[t]
+  \centering
+  \includegraphics[scale=0.32]{figures/newPlot.png}
+  \caption{ First row: Colors vs Threads (Subgraph size)  Second row: best performance for each algorithm}
+  \label{fig:results}
+\end{figure*}
 
 
 \section{Algorithm}
@@ -440,11 +445,7 @@ The results show how different algorithms affect the number of colors and perfor
 %  \caption{ Structural }
 %\end{figure*}
 
-\begin{figure*}
-  \includegraphics[scale=0.34]{figures/civilLand.png}
-  \caption{ Civil }
-  \label{fig:results}
-\end{figure*}
+
 %
 %\begin{figure*}[h]
 %  \includegraphics[scale=0.45]{figures/pwtkMetis.png}
