--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pascal Grosset at 2010-07-31 16:36:56 -0600 
+%% Created for Pascal Grosset at 2010-07-31 21:07:03 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13,8 +13,9 @@
 	Date-Added = {2010-07-31 16:33:57 -0600},
 	Date-Modified = {2010-07-31 16:35:30 -0600},
 	Keywords = {31 July 2010},
-	Title = {The University of Florida Sparse Matrix Collection },
-	Url = {http://www.cise.ufl.edu/research/sparse/matrices/}}
+	Title = {The University of Florida Sparse Matrix Collection},
+	Url = {http://www.cise.ufl.edu/research/sparse/matrices/},
+	Bdsk-Url-1 = {http://www.cise.ufl.edu/research/sparse/matrices/}}
 
 @article{boman2005,
 	Author = {Boman, Erik G Bozda, Doruk Catalyurek, Umit Gebremedhin, Assefaw H. Manne, Fredrik},
@@ -24,9 +25,9 @@
 	Year = {2005}}
 
 @article{bozdag2008a,
-	Author = {Bozdag, D Gebremedhin, A Manne, F Boman, E Catalyurek, U},
+	Author = {Bozdag, D Gebremedhin, A Manne, F Boman, E Catalyurek},
 	Date-Added = {2010-07-31 16:12:51 -0600},
-	Date-Modified = {2010-07-31 16:22:18 -0600},
+	Date-Modified = {2010-07-31 21:07:01 -0600},
 	Journal = {Journal of Parallel and Distributed Computing},
 	Number = {4},
 	Pages = {515-535},
